# 1 two sum test
add_executable(1two_sum_test ./1two_sum_test.cpp)
target_link_libraries(1two_sum_test gtest_main)
target_include_directories(1two_sum_test PRIVATE ../include)

# 2 add two numbers test
add_executable(2add_two_numbers_test ./2add_two_numbers_test.cpp)
target_link_libraries(2add_two_numbers_test gtest_main)
target_include_directories(2add_two_numbers_test PRIVATE ../include)

# 3 longest substring without repeating characters test
add_executable(3longest_substring_without_repeating_characters_test ./3longest_substring_without_repeating_characters_test.cpp)
target_link_libraries(3longest_substring_without_repeating_characters_test gtest_main)
target_include_directories(3longest_substring_without_repeating_characters_test PRIVATE ../include)

# 4 median of two sorted arrays test
add_executable(4median_of_two_sorted_arrays_test ./4median_of_two_sorted_arrays_test.cpp)
target_link_libraries(4median_of_two_sorted_arrays_test gtest_main)
target_include_directories(4median_of_two_sorted_arrays_test PRIVATE ../include)

# 11 container with most water test
add_executable(11container_with_most_water_test ./11container_with_most_water_test.cpp)
target_link_libraries(11container_with_most_water_test gtest_main)
target_include_directories(11container_with_most_water_test PRIVATE ../include)

# ==================================================================

# 15 three sum test
add_executable(15three_sum_test ./15three_sum_test.cpp)
target_link_libraries(15three_sum_test gtest_main)
target_include_directories(15three_sum_test PRIVATE ../include)

# 20 valid parentheses test
add_executable(20valid_parentheses_test ./20valid_parentheses_test.cpp)
target_link_libraries(20valid_parentheses_test gtest_main)
target_include_directories(20valid_parentheses_test PRIVATE ../include)

# 21 merge two sorted lists test
add_executable(21merge_two_sorted_lists_test ./21merge_two_sorted_lists_test.cpp)
target_link_libraries(21merge_two_sorted_lists_test gtest_main)
target_include_directories(21merge_two_sorted_lists_test PRIVATE ../include)

# ==================================================================

# 22 generate parentheses test
add_executable(22generate_parentheses_test ./22generate_parentheses_test.cpp)
target_link_libraries(22generate_parentheses_test gtest_main)
target_include_directories(22generate_parentheses_test PRIVATE ../include)

# 33 search 
add_executable(33search_in_rotated_sorted_array_test ./33search_in_rotated_sorted_array_test.cpp)
target_link_libraries(33search_in_rotated_sorted_array_test gtest_main)
target_include_directories(33search_in_rotated_sorted_array_test PRIVATE ../include)

# 36 valid sudoku test
add_executable(36valid_sudoku_test ./36valid_sudoku_test.cpp)
target_link_libraries(36valid_sudoku_test gtest_main)
target_include_directories(36valid_sudoku_test PRIVATE ../include)

# 42 trapping rain
add_executable(42trapping_rain_water_test ./42trapping_rain_water_test.cpp)
target_link_libraries(42trapping_rain_water_test gtest_main)
target_include_directories(42trapping_rain_water_test PRIVATE ../include)

# 49 group anagrams test
add_executable(49group_anagrams_test ./49group_anagrams_test.cpp)
target_link_libraries(49group_anagrams_test gtest_main)
target_include_directories(49group_anagrams_test PRIVATE ../include)

# ==================================================================

# 74 search a 2d matrix test
add_executable(74search_a_2d_matrix_test ./74search_a_2d_matrix_test.cpp)
target_link_libraries(74search_a_2d_matrix_test gtest_main)
target_include_directories(74search_a_2d_matrix_test PRIVATE ../include)

# 76 minimum window substring test
add_executable(76minimum_window_substring_test ./76minimum_window_substring_test.cpp)
target_link_libraries(76minimum_window_substring_test gtest_main)
target_include_directories(76minimum_window_substring_test PRIVATE ../include)

# 84 largest rectangle in histogram test
add_executable(84largest_rectangle_in_histogram_test ./84largest_rectangle_in_histogram_test.cpp)
target_link_libraries(84largest_rectangle_in_histogram_test gtest_main)
target_include_directories(84largest_rectangle_in_histogram_test PRIVATE ../include)

# ==================================================================

# 121 best time to buy and sell stock test
add_executable(121best_time_to_buy_and_sell_stock_test ./121best_time_to_buy_and_sell_stock_test.cpp)
target_link_libraries(121best_time_to_buy_and_sell_stock_test gtest_main)
target_include_directories(121best_time_to_buy_and_sell_stock_test PRIVATE ../include)

# ==================================================================

# 125 valid palindrome test
add_executable(125valid_palindrome_test ./125valid_palindrome_test.cpp)
target_link_libraries(125valid_palindrome_test gtest_main)
target_include_directories(125valid_palindrome_test PRIVATE ../include)

# 128 longest consecutive sequence test
add_executable(128longest_consecutive_sequence_test ./128longest_consecutive_sequence_test.cpp)
target_link_libraries(128longest_consecutive_sequence_test gtest_main)
target_include_directories(128longest_consecutive_sequence_test PRIVATE ../include)

# 150 evaluate reverse polish notation test
add_executable(150evaluate_reverse_polish_notation_test ./150evaluate_reverse_polish_notation_test.cpp)
target_link_libraries(150evaluate_reverse_polish_notation_test gtest_main)
target_include_directories(150evaluate_reverse_polish_notation_test PRIVATE ../include)

# 153 find minimum in rotated sorted array
add_executable(153find_minimum_in_rotated_sorted_array_test ./153find_minimum_in_rotated_sorted_array_test.cpp)
target_link_libraries(153find_minimum_in_rotated_sorted_array_test gtest_main)
target_include_directories(153find_minimum_in_rotated_sorted_array_test PRIVATE ../include)

# 155 min stack test
add_executable(155min_stack_test ./155min_stack_test.cpp)
target_link_libraries(155min_stack_test gtest_main)
target_include_directories(155min_stack_test PRIVATE ../include)

# ==================================================================

# 167 add two numbers ii test
add_executable(167two_sum_ii_test ./167two_sum_ii_test.cpp)
target_link_libraries(167two_sum_ii_test gtest_main)
target_include_directories(167two_sum_ii_test PRIVATE ../include)

# 206 reverse linked list test
add_executable(206reverse_linked_list_test ./206reverse_linked_list_test.cpp)
target_link_libraries(206reverse_linked_list_test gtest_main)
target_include_directories(206reverse_linked_list_test PRIVATE ../include)

# ==================================================================

# 217 contains duplicate test
add_executable(217contains_duplicate_test ./217contains_duplicate_test.cpp)
target_link_libraries(217contains_duplicate_test gtest_main)
target_include_directories(217contains_duplicate_test PRIVATE ../include)

# 238 product of array except self test
add_executable(238product_of_array_except_self_test ./238product_of_array_except_self_test.cpp)
target_link_libraries(238product_of_array_except_self_test gtest_main)
target_include_directories(238product_of_array_except_self_test PRIVATE ../include)

# 239 sliding window maximum test
add_executable(239sliding_window_maximum_test ./239sliding_window_maximum_test.cpp)
target_link_libraries(239sliding_window_maximum_test gtest_main)
target_include_directories(239sliding_window_maximum_test PRIVATE ../include)

# 271 encode and decode strings
add_executable(271encode_and_decode_strings_test ./271encode_and_decode_strings_test.cpp)
target_link_libraries(271encode_and_decode_strings_test gtest_main)
target_include_directories(271encode_and_decode_strings_test PRIVATE ../include)

# 242 valid anagram test
add_executable(242valid_anagram_test ./242valid_anagram_test.cpp)
target_link_libraries(242valid_anagram_test gtest_main)
target_include_directories(242valid_anagram_test PRIVATE ../include)

# ==================================================================

# 347 top k frequent elements test
add_executable(347top_k_frequent_elements_test ./347top_k_frequent_elements_test.cpp)
target_link_libraries(347top_k_frequent_elements_test gtest_main)
target_include_directories(347top_k_frequent_elements_test PRIVATE ../include)

#  424 longest repeating character replacement test
add_executable(424longest_repeating_character_replacement_test ./424longest_repeating_character_replacement_test.cpp)
target_link_libraries(424longest_repeating_character_replacement_test gtest_main)
target_include_directories(424longest_repeating_character_replacement_test PRIVATE ../include)

# 496 next greater element i test
add_executable(496next_greater_element_i_test ./496next_greater_element_i_test.cpp)
target_link_libraries(496next_greater_element_i_test gtest_main)
target_include_directories(496next_greater_element_i_test PRIVATE ../include)

# 567 permutation in string test 
add_executable(567permutation_in_string_test ./567permutation_in_string_test.cpp)
target_link_libraries(567permutation_in_string_test gtest_main)
target_include_directories(567permutation_in_string_test PRIVATE ../include)

# ==================================================================

# 704 binary search test
add_executable(704binary_search_test ./704binary_search_test.cpp)
target_link_libraries(704binary_search_test gtest_main)
target_include_directories(704binary_search_test PRIVATE ../include)

# 739 daily temperature test
add_executable(739daily_temperatures_test ./739daily_temperatures_test.cpp)
target_link_libraries(739daily_temperatures_test gtest_main)
target_include_directories(739daily_temperatures_test PRIVATE ../include)

# ==================================================================

# 835 car fleet test
add_executable(853car_fleet_test ./853car_fleet_test.cpp)
target_link_libraries(853car_fleet_test gtest_main)
target_include_directories(853car_fleet_test PRIVATE ../include)

# 875 koko eating bananas test
add_executable(875koko_eating_bananas_test ./875koko_eating_bananas_test.cpp)
target_link_libraries(875koko_eating_bananas_test gtest_main)
target_include_directories(875koko_eating_bananas_test PRIVATE ../include)

# 981 time based key value store test
add_executable(981time_based_key_value_store_test ./981time_based_key_value_store_test.cpp)
target_link_libraries(981time_based_key_value_store_test gtest_main)
target_include_directories(981time_based_key_value_store_test PRIVATE ../include)

# ==================================================================

# Add tests
include(GoogleTest)
add_test(NAME 1two_sum_test COMMAND 1two_sum_test)
add_test(NAME 2add_two_numbers_test COMMAND 2add_two_numbers_test)
add_test(NAME 3longest_substring_without_repeating_characters_test COMMAND 3longest_substring_without_repeating_characters_test)
add_test(NAME 4median_of_two_sorted_arrays_test COMMAND 4median_of_two_sorted_arrays_test)
add_test(NAME 11container_with_most_water_test COMMAND 11container_with_most_water_test)

add_test(NAME 15three_sum_test COMMAND 15three_sum_test)
add_test(NAME 20valid_parentheses_test COMMAND 20valid_parentheses_test)
add_test(NAME 21merge_two_sorted_lists_test COMMAND 21merge_two_sorted_lists_test)

add_test(NAME 22generate_parentheses_test COMMAND 22generate_parentheses_test)
add_test(NAME 33search_in_rotated_sorted_array_test COMMAND 33search_in_rotated_sorted_array_test)
add_test(NAME 36valid_sudoku_test COMMAND 36valid_sudoku_test)
add_test(NAME 42trapping_rain_water_test COMMAND 42trapping_rain_water_test)
add_test(NAME 49group_anagrams_test COMMAND 49group_anagrams_test)

add_test(NAME 74search_a_2d_matrix_test COMMAND 74search_a_2d_matrix_test)
add_test(NAME 76minimum_window_substring_test COMMAND 76minimum_window_substring_test)
add_test(NAME 84largest_rectangle_in_histogram_test COMMAND 84largest_rectangle_in_histogram_test)

add_test(NAME 121best_time_to_buy_and_sell_stock_test COMMAND 121best_time_to_buy_and_sell_stock_test)

add_test(NAME 125valid_palindrome_test COMMAND 125valid_palindrome_test)
add_test(NAME 128longest_consecutive_sequence_test COMMAND 128longest_consecutive_sequence_test)
add_test(NAME 150evaluate_reverse_polish_notation_test COMMAND 150evaluate_reverse_polish_notation_test)
add_test(NAME 155min_stack_test COMMAND 155min_stack_test)
add_test(NAME 153find_minimum_in_rotated_sorted_array_test COMMAND 153find_minimum_in_rotated_sorted_array_test)

add_test(NAME 167two_sum_ii_test COMMAND 167two_sum_ii_test)
add_test(NAME 206reverse_linked_list_test COMMAND 206reverse_linked_list_test)

add_test(NAME 217contains_duplicate_test COMMAND 217contains_duplicate_test)
add_test(NAME 238product_of_array_except_self_test COMMAND 238product_of_array_except_self_test)
add_test(NAME 239sliding_window_maximum_test COMMAND 239sliding_window_maximum_test)
add_test(NAME 242valid_anagram_test COMMAND 242valid_anagram_test)
add_test(NAME 271encode_and_decode_strings_test COMMAND 271encode_and_decode_strings_test)

add_test(NAME 347top_k_frequent_elements_test COMMAND 347top_k_frequent_elements_test)
add_test(NAME 424longest_repeating_character_replacement_test COMMAND 424longest_repeating_character_replacement_test)
add_test(NAME 496next_greater_element_i_test COMMAND 496next_greater_element_i_test)
add_test(NAME 567permutation_in_string_test COMMAND 567permutation_in_string_test)

add_test(NAME 739daily_temperatures_test COMMAND 739daily_temperatures_test)
add_test(NAME 704binary_search_test COMMAND 704binary_search_test)

add_test(NAME 853car_fleet_test COMMAND 853car_fleet_test)
add_test(NAME 875koko_eating_bananas_test COMMAND 875koko_eating_bananas_test)
add_test(NAME 981time_based_key_value_store_test COMMAND 981time_based_key_value_store_test)
